--- a/.github/workflows/deploy-docker-compose.yml
+++ b/.github/workflows/deploy-docker-compose.yml
@@ -167,13 +167,15 @@ jobs:
           GH_ENV_SECRETS: ${{ toJson(secrets) }}
           GH_ENV_VARS: ${{ toJson(vars) }}
         run: |
-          echo "GH_ENV_SECRETS=$GH_ENV_SECRETS"
+          printf "GH_ENV_SECRETS=\"%s\"\n" "$GH_ENV_SECRETS"
           echo "GH_ENV_VARS=$GH_ENV_VARS"
 
+          # Safely print GH_ENV_VARS by escaping double quotes
+          printf "GH_ENV_VARS=\"%s\"\n" "$GH_ENV_VARS"
+          
           # Write test file to steps.create-env-file.outputs.content for debugging
           ENV_CONTENT="ENVIRONMENT=${{ inputs.environment }}\nIMAGE_TAG=${{ needs.prepare-deploy.outputs.image-tag-to-deploy }}\n"
           {
-
             echo "env-file-content<<EOF"
             echo -e "$ENV_CONTENT"
             echo "EOF"
