--- a/.github/workflows/deploy-docker-compose.yml
+++ b/.github/workflows/deploy-docker-compose.yml
@@ -30,16 +30,6 @@ on:
         description: "The name of the .env file to create on the VM (Default: .env)"
         required: false
 
-      github-env-secret-names:
-        type: string
-        description: "List of environment variables from GitHub Secrets, separated by new lines. Example: 'SECRET1\nSECRET2\nSECRET3'"
-        required: false
-          
-      github-env-variable-names:
-        type: string
-        description: "List of environment variables from GitHub Variables, separated by new lines. Example: 'VAR1\nVAR2\nVAR3'"
-        required: false
-    
       remove-volumes:
         type: boolean
         default: false
@@ -161,7 +151,7 @@ jobs:
           source: ${{ steps.extract_basename.outputs.basename }}
           target: /home/${{ vars.VM_USERNAME }}
 
-      - name: Generate Environment File
+      - name: Create local ${{ inputs.env-file-name }} file
         id: generate_env
         run: |
           ENV_FILE="${{ inputs.env-file-name }}"
@@ -201,11 +191,8 @@ jobs:
           VARS_CONTEXT: ${{ toJson(vars) }}
           SECRETS_CONTEXT: ${{ toJson(secrets) }}
 
-      - name: SSH to VM and create ${{ inputs.env-file-name }} file
-        uses: appleboy/ssh-action@v1.0.3
-        env:
-          SECRETS_CONTEXT: ${{ toJson(secrets) }}
-          VARS_CONTEXT: ${{ toJson(vars) }}
+      - name: Copy ${{ inputs.env-file-name }} file to VM host
+        uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ vars.VM_HOST }}
           username: ${{ vars.VM_USERNAME }}
@@ -214,18 +201,8 @@ jobs:
           proxy_username: ${{ vars.DEPLOYMENT_GATEWAY_USER }}
           proxy_key: ${{ secrets.DEPLOYMENT_GATEWAY_SSH_KEY }}
           proxy_port: ${{ vars.DEPLOYMENT_GATEWAY_PORT }}
-          script: |
-            # https://docs.github.com/en/actions/using-workflows/workflow-commands-for-github-actions#setting-an-environment-variable
-            # https://docs.github.com/en/actions/using-workflows/workflow-commands-for-github-actions#multiline-strings
-            EOF=$(dd if=/dev/urandom bs=15 count=1 status=none | base64)
-            to_envs() { jq -r "to_entries[] | \"\(.key)<<$EOF\n\(.value)\n$EOF\n\""; }
-            
-            ENV_FILE="${{ inputs.env-file-name }}"
-            echo "ENVIRONMENT=${{ inputs.environment }}" > "$ENV_FILE"
-            echo "IMAGE_TAG=${{ needs.prepare-deploy.outputs.image-tag-to-deploy }}" >> "$ENV_FILE"
-            
-            echo "$VARS_CONTEXT" | to_envs >> "$ENV_FILE"
-            echo "$SECRETS_CONTEXT" | to_envs >> "$ENV_FILE"
+          source: ${{ inputs.env-file-name }}
+          target: /home/${{ vars.VM_USERNAME }}
 
       - name: SSH to VM and execute docker compose up
         uses: appleboy/ssh-action@v1.0.3
