--- a/.github/workflows/deploy-docker-compose.yml
+++ b/.github/workflows/deploy-docker-compose.yml
@@ -7,7 +7,7 @@ on:
         type: string
         description: "The deployment environment (e.g., production, staging)"
         required: true
-          
+      
       docker-compose-file:
         type: string
         default: "./compose.yaml"
@@ -34,6 +34,12 @@ on:
         type: boolean
         default: false
         description: "Remove named volumes declared in the 'volumes' section of the Compose file and anonymous volumes attached to containers"
+        required: false
+
+      deployment-base-path:
+        type: string
+        default: "/opt/github"
+        description: "Base path on the VM where deployment files will be stored"
         required: false
 
 jobs:
@@ -99,7 +105,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Extract basename of docker-compose-file
-        id: extract_basename
+        id: extract-basename
         run: |
           BASENAME=$(basename "${{ inputs.docker-compose-file }}")
           echo "basename=$BASENAME" >> $GITHUB_OUTPUT
@@ -122,15 +128,16 @@ jobs:
             #!/bin/bash
             set -e  # Exit immediately if a command exits with a non-zero status
 
-            COMPOSE_FILE="${{ steps.extract_basename.outputs.basename }}"
+            BASE_PATH="${{ inputs.deployment-base-path }}"
+            COMPOSE_FILE="$BASE_PATH/${{ steps.extract-basename.outputs.basename }}"
 
-            # Check if docker-compose.prod.yml exists
+            # Check if docker-compose file exists
             if [ -f "$COMPOSE_FILE" ]; then
               echo "$COMPOSE_FILE found."
           
               # Check if .env with env-file-name exists
-              if [ -f "${{ inputs.env-file-name }}" ]; then
-                docker compose -f "$COMPOSE_FILE" --env-file="${{ inputs.env-file-name }}" down --remove-orphans --rmi all ${{ inputs.remove-volumes && '--volumes' || '' }}
+              if [ -f "$BASE_PATH/${{ inputs.env-file-name }}" ]; then
+                docker compose -f "$COMPOSE_FILE" --env-file="$BASE_PATH/${{ inputs.env-file-name }}" down --remove-orphans --rmi all ${{ inputs.remove_volumes && '--volumes' || '' }}
               else
                 docker compose -f "$COMPOSE_FILE" down --remove-orphans --rmi all
               fi
@@ -148,11 +155,10 @@ jobs:
           proxy_username: ${{ vars.DEPLOYMENT_GATEWAY_USER }}
           proxy_key: ${{ secrets.DEPLOYMENT_GATEWAY_SSH_KEY }}
           proxy_port: ${{ vars.DEPLOYMENT_GATEWAY_PORT }}
-          source: ${{ steps.extract_basename.outputs.basename }}
-          target: /home/${{ vars.VM_USERNAME }}
+          source: ${{ steps.extract-basename.outputs.basename }}
+          target: ${{ inputs.deployment-base-path }}
 
       - name: Create local ${{ inputs.env-file-name }} file
-        id: generate_env
         run: |
           ENV_FILE="${{ inputs.env-file-name }}"
           
@@ -185,8 +191,6 @@ jobs:
             | to_entries[]
             | "\(.key)=\(.value | @json)"
           ' >> "$ENV_FILE"
-
-          cat $ENV_FILE
         env:
           VARS_CONTEXT: ${{ toJson(vars) }}
           SECRETS_CONTEXT: ${{ toJson(secrets) }}
@@ -202,7 +206,7 @@ jobs:
           proxy_key: ${{ secrets.DEPLOYMENT_GATEWAY_SSH_KEY }}
           proxy_port: ${{ vars.DEPLOYMENT_GATEWAY_PORT }}
           source: ${{ inputs.env-file-name }}
-          target: /home/${{ vars.VM_USERNAME }}
+          target: ${{ inputs.deployment-base-path }}
 
       - name: SSH to VM and execute docker compose up
         uses: appleboy/ssh-action@v1.0.3
@@ -215,4 +219,5 @@ jobs:
           proxy_key: ${{ secrets.DEPLOYMENT_GATEWAY_SSH_KEY }}
           proxy_port: ${{ vars.DEPLOYMENT_GATEWAY_PORT }}
           script: |
-            docker compose -f ${{ steps.extract_basename.outputs.basename }} --env-file=${{ inputs.env-file-name }} up --pull=always -d
+            BASE_PATH="${{ inputs.deployment-base-path }}"
+            docker compose -f "$BASE_PATH/${{ steps.extract-basename.outputs.basename }}" --env-file="$BASE_PATH/${{ inputs.env-file-name }}" up --pull=always -d
