--- a/.github/workflows/deploy-docker-compose.yml
+++ b/.github/workflows/deploy-docker-compose.yml
@@ -84,17 +84,18 @@ jobs:
           IMAGE_TAG="${{ steps.retrieve-image-tag.outputs.image-tag-to-deploy }}"
 
           ENCODED_TOKEN=$(echo -n "${{ secrets.GITHUB_TOKEN }}" | base64)
-          RESPONSE=$(curl -s -H "Authorization: Bearer ${ENCODED_TOKEN}" "https://ghcr.io/v2/${IMAGE_NAME}/tags/list")
-          echo "Response: $RESPONSE"
-
-          TAG_EXISTS=$(echo "$RESPONSE" | jq -r --arg TAG "${IMAGE_TAG}" '.tags[] | select(. == $TAG)')
-          echo "Tag exists: ${TAG_EXISTS}"
+          STATUS=$(curl -s -o /dev/null -w "%{http_code}" \
+            -H "Accept: application/vnd.docker.distribution.manifest.v2+json" \
+            -H "Authorization: Bearer ${ENCODED_TOKEN}" \
+            "https://ghcr.io/v2/${IMAGE_NAME}/manifests/${IMAGE_TAG}")
           
-          if [ -z "$TAG_EXISTS" ]; then
+          echo "HTTP status: $STATUS"
+          
+          if [ "$STATUS" -eq "200" ]; then
+            echo "Image ${IMAGE_NAME}:${IMAGE_TAG} exists."
+          else
             echo "Image ${IMAGE_NAME}:${IMAGE_TAG} does not exist."
             exit 1
-          else
-            echo "Image ${IMAGE_NAME}:${IMAGE_TAG} exists."
           fi
 
   deploy:
