--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -65,7 +65,7 @@ jobs:
           - platform: linux/amd64
             runner: ase-large-ubuntu
           - platform: linux/arm64
-            runner: ubuntu-24.04-arm
+            runner: arc-runner-set
     runs-on: ${{ matrix.runner || 'ubuntu-latest' }}
     steps:
       # Git Checkout
