feat: include matrix.platform in build job name

--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -57,7 +57,7 @@ on:
 
 jobs:
   build:
-    name: Build Docker Image for ${{ inputs.image-name }}
+    name: Build ${{ matrix.platform }} Docker Image for ${{ inputs.image-name }}
     strategy:
       fail-fast: false
       matrix:
