--- a/.github/workflows/build-and-push-docker-image.yml
+++ b/.github/workflows/build-and-push-docker-image.yml
@@ -59,7 +59,7 @@ jobs:
   build:
     name: Build ${{ matrix.platform }} Docker Image for ${{ inputs.image-name }}
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
         include:
           - platform: linux/amd64
